<resources>
    <string name="app_name">E-commerce</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Username">Username</string>
    <string name="TypeyourUsername">Type your Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="TypeyourPassword">Type your Password</string>
    <string name="Wantto">Want to</string>
    <string name="ForgetPassword">Forget Password</string>
    <string name="REGISTER">REGISTER?</string>
    <string name="Mail">Mail</string>
    <string name="Yourmail">Your mail</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="YourPhoneNumber">Your Phone Number</string>
    <string name="YourPassword">Your Password</string>
    <string name="Address">Address</string>
    <string name="YourAddress">Your Address</string>
    <string name="Rememberthisdevice">Remember this device</string>
    <string name="SignUp">Sign Up</string>
    <string name="BuyAnything">Buy Anything !</string>
    <string name="ExclusiveProducts">Exclusive Products !</string>
    <string name="AmazingDiscount">Amazing Discount !</string>
    <string name="Next">Next</string>
    <string name="Skip">Skip</string>
    <string name="DailyDeals">Daily Deals</string>
    <string name="RecentAdded">Recent Added</string>
    <string name="Trending">Trending</string>
    <string name="ProceedtoPayment">Proceed to Payment</string>
    <string name="Color">Color :</string>
    <string name="Sizes">Sizes :</string>
    <string name="Bookmark">Bookmark</string>
    <string name="ADDTOCART">ADD TO CART</string>
    <string name="Quantity">Quantity</string>
    <string name="MyOrders">My Orders</string>
    <string name="DeliveryInfo">Delivery Info</string>
    <string name="Settings">Settings</string>
    <string name="Cart">Cart</string>
    <string name="time_remaining">Time Created</string>
    <string name="Edite">Update</string>
    <string name="Category">Category</string>
</resources>