<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        tools:context=".view.fragments.Login1Fragment">


        <TextView
            android:id="@+id/textView"
            style="@style/textViewLoginStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="53dp"
            android:layout_marginLeft="53dp"
            android:text="@string/Username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/Mail"

            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/edUserName" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PhoneNumber"
            android:layout_marginTop="15dp"

            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/edMail" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Password"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/edPhone" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Address"
            android:textStyle="bold"
            android:layout_marginTop="15dp"

            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/edPssword" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.08481532" />

        <EditText
            android:id="@+id/edUserName"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"

            android:background="@drawable/ic_bc_login"
            android:ems="10"
            android:hint="@string/TypeyourUsername"
            android:inputType="textPersonName"
            android:paddingStart="23dp"
            android:paddingEnd="23dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/edMail"
            android:layout_width="0dp"
            android:layout_height="40dp"


            android:layout_marginTop="10dp"
            android:background="@drawable/ic_bc_login"
            android:ems="10"
            android:hint="@string/Yourmail"
            android:inputType="textPersonName"
            android:paddingStart="23dp"
            android:paddingEnd="23dp"

            app:layout_constraintEnd_toEndOf="@+id/edUserName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edUserName"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:autofillHints=""
            />

        <EditText
            android:id="@+id/edPhone"
            android:layout_width="0dp"
            android:layout_height="40dp"


            android:autofillHints=""
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_bc_login"
            android:ems="10"
            android:hint="@string/YourPhoneNumber"
            android:inputType="textPersonName"
            android:paddingStart="23dp"

            android:paddingEnd="23dp"
            app:layout_constraintEnd_toEndOf="@+id/edMail"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/edMail"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/edPssword"
            android:layout_width="0dp"
            android:layout_height="40dp"


            android:layout_marginTop="15dp"

            android:autofillHints=""
            android:background="@drawable/ic_bc_login"
            android:ems="10"
            android:hint="@string/YourPassword"
            android:inputType="textPassword"
            android:paddingStart="23dp"

            android:paddingEnd="23dp"
            app:layout_constraintEnd_toEndOf="@+id/edPhone"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edPhone"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <EditText
            android:id="@+id/edAddress"
            android:layout_width="0dp"
            android:layout_height="135dp"


            android:autofillHints=""
            android:background="@drawable/ic_bc_dress"
            android:ems="10"

            android:layout_marginTop="15dp"
            android:hint="@string/YourAddress"
            android:inputType="textPersonName"
            android:paddingStart="23dp"

            android:paddingTop="20dp"
            android:gravity="top"
            android:paddingEnd="23dp"
            app:layout_constraintEnd_toEndOf="@+id/edPssword"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edPssword"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />


        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/Rememberthisdevice"
            app:layout_constraintStart_toStartOf="@+id/edAddress"
            app:layout_constraintTop_toBottomOf="@+id/edAddress" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUp"
            style="@style/ButtonLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="12dp"

            android:layout_marginStart="38dp"
            android:layout_marginEnd="38dp"
            android:text="@string/SignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:elevation="2dp"
            android:layout_height="wrap_content"
android:indeterminateTint="@color/white"


            android:visibility="invisible"
        android:background="#FA697C"
            app:layout_constraintBottom_toBottomOf="@+id/signUp"
            app:layout_constraintEnd_toEndOf="@+id/signUp"
            app:layout_constraintStart_toStartOf="@+id/signUp"
            app:layout_constraintTop_toTopOf="@+id/signUp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
